--- a/index.html
+++ b/index.html
@@ -1,71 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>M|Dev Dripping Water</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Liquid Morphing Cards with Particles</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="scene">
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
-  <div class="drop"></div>
 
-  <div class="lightning"></div>
+<canvas id="particles"></canvas>
 
-  <div class="controls">
-    <label>
-      Speed
-      <input type="range" id="speed" min="4" max="20" value="12">
-    </label>
-  </div>
+<div class="card" id="mainCard">
+  <span>Touch Me!</span>
 </div>
-  <script src="script.js"></script>
+
+<script src="script.js"></script>
 </body>
 </html>
