--- a/index.html
+++ b/index.html
@@ -1,19 +1,71 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Liquid Morphing Cards with Particles</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>M|Dev Dropping Water</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="scene">
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
+  <div class="drop"></div>
 
-<canvas id="particles"></canvas>
+  <div class="lightning"></div>
 
-<div class="card" id="mainCard">
-  <span>Touch Me!</span>
+  <div class="controls">
+    <label>
+      Speed
+      <input type="range" id="speed" min="4" max="20" value="12">
+    </label>
+  </div>
 </div>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
